# dir-view

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: main.yml
src/: dir.rs  dir_entry.rs  dir_entry_utf8.rs  dir_utf8.rs  lib.rs  read_dir.rs  read_dir_utf8.rs
tests/: basic.rs
