[package]
name = "dir-view"
version = "0.1.2"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
description = "Views of cap-std's Dir"
documentation = "https://docs.rs/dir-view"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/dir-view"
edition = "2018"
keywords = ["api", "file"]
categories = ["filesystem"]
exclude = ["/.*"]

[dependencies]
cap-std = "1.0.3"
camino = { version = "1.1.2", optional = true }

[target.'cfg(unix)'.dependencies]
rustix = "0.36.6"

[target.'cfg(windows)'.dependencies]
cap-primitives = "1.0.3"

[dev-dependencies]
cap-tempfile = "1.0.3"

[features]
default = []
fs_utf8 = ["cap-std/fs_utf8", "camino"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]
