[package]
name = "dir-view"
version = "0.2.0"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
description = "Views of cap-std's Dir"
documentation = "https://docs.rs/dir-view"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/dir-view"
edition = "2021"
keywords = ["api", "file"]
categories = ["filesystem"]
exclude = ["/.*"]

[dependencies]
cap-std = "3.0.0"
cap-fs-ext = { version = "3.0.0", optional = true }
camino = { version = "1.1.2", optional = true }

[target.'cfg(unix)'.dependencies]
rustix = "0.38.0"

[target.'cfg(windows)'.dependencies]
cap-primitives = "3.0.0"

[dev-dependencies]
cap-tempfile = "3.0.0"

[features]
default = []
fs_utf8 = ["cap-std/fs_utf8", "cap-fs-ext/fs_utf8", "camino"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg=doc_cfg"]
